@@ -1,5 +1,10 @@
 2012-05-22  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/53408
+	* gcc.dg/torture/pr53408.c: New testcase.
+
+2012-05-22  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/51071
 	* gcc.dg/torture/pr51071-2.c: New testcase.
 
